--- a/src/assets/stylesheets/shared/_pipelines.less
+++ b/src/assets/stylesheets/shared/_pipelines.less
@@ -2,13 +2,13 @@
 
 .f8launcher-pipeline-stages {
   display: inline-flex;
-  // justify-content: space-evenly; remove for now
   justify-content: space-between;
+  margin-bottom: 15px;
   &--line {
     border-bottom: 5px solid @color-pf-blue;
     padding-left: 15px;
     padding-right: 15px;
-    width: 110px;
+    // width: 110px;
     &:after {
       width: 25px;
       height: 25px;
@@ -17,7 +17,9 @@
       color: @color-pf-blue;
       position: relative;
       right: 45%;
-      bottom: -12px;
+      // bottom: -12px;
+      // right: 10%;
+      bottom: -15px;
       @media screen and (max-width: 768px) {
         // right: 15%;
       }
